# file-explorer

./: CMakeLists.txt  CMakePresets.json  README.md  fileUtils.c  fileUtils.h  main.c
include/: fileUtils.h
src/: fileUtils.c  main.c
